--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
         "dev": "vite",
         "build": "vite build",
         "preview": "vite preview",
-        "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
+        "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
+        "serve": "vue-cli-service serve"
     },
     "dependencies": {
         "chart.js": "3.3.2",
@@ -18,7 +19,7 @@
     },
     "devDependencies": {
         "@rushstack/eslint-patch": "^1.1.4",
-        "@vitejs/plugin-vue": "^4.1.0",
+        "@vitejs/plugin-vue": "^4.6.2",
         "@vue/eslint-config-prettier": "^7.0.0",
         "eslint": "^8.22.0",
         "eslint-plugin-vue": "^9.3.0",
